--- a/web/css/other.css
+++ b/web/css/other.css
@@ -294,6 +294,9 @@ table.tablesorter thead tr .headerSortDown span{background-image:url(../images/s
 .filefield .profile-photo {	
 	background:url(../images/photo.png) no-repeat center !important;
 }
+.filefield .company-logo {	
+	background:url(../images/quest.png) no-repeat center !important;
+}
 
 #photoaddbtn {
 	position:absolute;
@@ -330,7 +333,7 @@ table.tablesorter thead tr .headerSortDown span{background-image:url(../images/s
 	opacity:.8;
 }
 
-#photoaddbtn.photo-remove, #fileaddbtn.file-remove {	
+.logo-remove, #photoaddbtn.photo-remove, #fileaddbtn.file-remove {	
 	background-color:red !important;	
 	background-image:url(../images/form/photo_remove.png) !important;
 	font-size:1.4rem;
