--- a/web/css/dropdownmenu.css
+++ b/web/css/dropdownmenu.css
@@ -10,7 +10,7 @@
 .second-level-menu>li{position:relative;height:32px;background:#262626}
 .second-level-menu>li:last-child{border-bottom-left-radius:15px;border-bottom-right-radius:15px}
 .second-level-menu>li:hover{background:#4b4b4b;border-bottom-left-radius:none;border-bottom-right-radius:none}
-.top-level-menu{list-style:none;padding:0;margin:0}
+.top-level-menu{list-style:none;padding:0;margin:0;position:relative;z-index:100000;}
 .top-level-menu>li{position:relative;float:left;min-width:200px;border-radius:16px;border:2px #00a8ff solid;text-transform:uppercase;color:#EEE;font-size:1.3rem;background-color:#262626;background-image:url('../images/dwn.png');background-repeat:no-repeat;background-position:95% center}
 .top-level-menu>li:hover{background-color:#4b4b4b;border-bottom-left-radius:0 !important;border-bottom-right-radius:0 !important}
 .top-level-menu>li>a{padding-right:25px}
