--- a/web/css/other.css
+++ b/web/css/other.css
@@ -8,7 +8,7 @@
 /* Grid */
 .grid{display:inline;float:left;position:relative;margin-left:0;margin-right:0; min-height:20px}
 .grid100pcnt {width:100%;}
-.grid670 {width:670px;} .grid400{width:400px} .grid440{width:440px} .grid320 {width:320px} .grid310 {width:310px} .grid300 {width:300px} 
+.grid670 {width:670px;} .grid400{width:400px} .grid440{width:440px} .grid320 {width:320px} .grid310 {width:310px} .grid300 {width:300px}  .grid550 {width:550px}
 .grid290 {width:290px;} .grid260 { width:290px; } .grid268 { width:268px } .grid230 {width:230px} .grid180 {width:180px} .grid200 {width:200px} .grid100{width:100px} 
 .clear{clear:both;display:block;overflow:hidden;visibility:hidden;width:0;height:0}
 .clearfix:before,.clearfix:after{content:'\0020';display:block;overflow:hidden;visibility:hidden;width:0;height:0}
@@ -22,6 +22,7 @@
 .padding10 { padding:10px !important; }
 .padding20 { padding:20px !important; }
 .paddingtop0 {padding-top: 0px !important; }
+.paddingtop15 {padding-top: 15px !important; }
 .paddingtop60 {padding-top: 60px !important; }
 .paddingleft20  { padding-left:20px !important; }
 .paddingleft40  { padding-left:40px !important; }
@@ -298,10 +299,6 @@ table.tablesorter thead tr .headerSortDown span{background-image:url(../images/s
 }
 .filefield .company-logo {	
 	background:url(../images/quest.png) no-repeat center !important;
-}
-
-.detail_page_company_logo{
-	margin-top: 60px;
 }
 
 #photoaddbtn {
