Sign-in, FB Connect, Vacancy Manager
- Sign in via dialog
- Facebook connect
- Vacancy Manager page
- Applied Vacancies page
- Who wants to work here page
- Hire me functionality
- DB changes
- Other minor changes

--- a/web/css/account.css
+++ b/web/css/account.css
@@ -8,92 +8,101 @@
 	border-top:5px solid #c72b0f;
 }
 
-	.create-account-header {
-		height:120px;
-		background:#262626;	
-	}
-		.account-block-title {
-			font-size:1.5rem;
-			font-weight:600;
-			color:rgba(0,0,0, .8);
-			text-transform:uppercase;	
-			padding-bottom:20px;
-		}
-		
-		.account-block-title a {
-			color:#ff3000;	
-		}
-		
-		.account-title {
-			font-family: 'gothamlight';
-			font-size: 3rem;
-			color: #FFF;
-			text-align: center;
-			text-transform: uppercase;
-			padding: 30px 0 5px 0;	
-		}
-		
-		.account-title-sub {
-			font-size:1.3rem;
-			color:#FFF;
-			text-align:center;	
-		}
-		
-		.account-title-sub span {
-			font-family: 'gothamlight';
-			font-style:italic;	
-		}
-	
-		.account-title-sub a {
-			text-transform:uppercase;
-			font-weight:bold;
-			letter-spacing:0;
-			text-decoration:underline;
-			color:#FFF;	
-		}
-		
-		.account-title-sub a:hover {
-			color:#ff3000;	
-		}
-	
-	
-	.create-account-body {
-		min-height:400px;	
-	}
-	
-	.create-account-body .social-login {
-		border-bottom:1px solid #CCC; 
-		padding:20px 25px 20px 40px	
-	}
-	
-	.create-account-body  .login-from {		
-		min-height:335px;
-		padding:30px 0px 0px 20px	
-	}	
+.create-account-header {
+	height:120px;
+	background:#262626;	
+}
 
-	.tab-switch {
-		margin:20px 0 25px 0;
-		text-align:center;
-		font-size:1.6rem;
-	}
-		.tab-switch a {
-			color:#555;
-			border: 2px #FFF solid;
-			border-radius:16px;
-			display:inline-block;
-			padding:5px 10px;
-			cursor:pointer;
-		}
-
-		.tab-switch a:hover {
-			border-color:#d72e07;
-		}
+.account-block-title {
+	font-size:1.5rem;
+	font-weight:600;
+	color:rgba(0,0,0, .8);
+	text-transform:uppercase;	
+	padding-bottom:20px;
+}
 		
-		.tab-switch a.sel {
-			color:#FFF;
-			border-color:#d72e07;
-			background:#d72e07
-		}
+.account-block-title a {
+	color:#ff3000;	
+}
+		
+.account-title {
+	font-family: 'gothamlight';
+	font-size: 3rem;
+	color: #FFF;
+	text-align: center;
+	text-transform: uppercase;
+	padding: 30px 0 5px 0;	
+}
+
+.account-title-sub {
+	font-size:1.3rem;
+	color:#FFF;
+	text-align:center;	
+}
+
+.account-title-sub span {
+	font-family: 'gothamlight';
+	font-style:italic;	
+}
+
+.account-title-sub a {
+	text-transform:uppercase;
+	font-weight:bold;
+	letter-spacing:0;
+	text-decoration:underline;
+	color:#FFF;	
+}
+
+.account-title-sub a:hover {
+	color:#ff3000;	
+}
+
+
+.create-account-body {
+	min-height:400px;	
+}
+
+
+.create-account-body .social-login,
+.signin-body .social-login {
+	border-bottom:1px solid #CCC; 
+	padding:20px 25px 20px 40px	
+}
+	
+.create-account-body .login-from {
+	min-height:335px;
+	padding:30px 0px 0px 20px	
+}	
+
+.signin-body .login-from {		
+	min-height:200px;
+	padding:30px 0px 0px 20px	
+}
+
+.tab-switch {
+	margin:20px 0 25px 0;
+	text-align:center;
+	font-size:1.6rem;
+}
+
+.tab-switch a {
+	color:#555;
+	border: 2px #FFF solid;
+	border-radius:16px;
+	display:inline-block;
+	padding:5px 10px;
+	cursor:pointer;
+}
+
+.tab-switch a:hover {
+	border-color:#d72e07;
+}
+
+.tab-switch a.sel {
+	color:#FFF;
+	border-color:#d72e07;
+	background:#d72e07
+}
 		
 .create-account-body .tab {	
 	min-height:470px;
@@ -110,7 +119,12 @@
 #company .grid, #user .grid {
 	width:44%;
 	padding:20px 20px 30px 20px !important;	
-}		
+}
+
+.signin-body .grid {
+    padding: 10px 12px 30px 22px !important;
+    width: 44%;
+}
 	
 #create-account-form label {
 	display:block;
@@ -123,4 +137,22 @@
 .connect-button {
 	padding-bottom:25px;
 	text-align:center;
-}	
+}
+
+.signin-body .error {
+	width:80%;
+	margin:10px auto;
+	display: none;
+	background-color: #E22301;		
+	padding: 7px 0;
+	text-align: center;
+	font-size: 100%;
+	font-size: 15px;
+	font-size: 1.5rem;
+	color: #FFF;
+	opacity: 0;
+	filter:alpha(opacity = 0);
+	-webkit-border-radius:7px;
+	-moz-border-radius:7px;	
+	border-radius:7px;
+}
