--- a/web/css/main.css
+++ b/web/css/main.css
@@ -400,7 +400,7 @@ header #search-result-inner .search-item p {
 	height:60px;
 }
 .vac-slider .vac-wrapper .vac-info {
-	height:115px;
+	height:140px;
 	color: rgba(255, 255, 255, 0.8);
     font-family: 'gothamlight';
 	font-weight:bold;
@@ -409,7 +409,7 @@ header #search-result-inner .search-item p {
     padding: 0 50px;	
 }
 .vac-slider .vac-skills {
-	margin: 45px 15px;
+	margin: 20px 15px 45px;
 	overflow:auto;    
 }
 .vac-slider .vac-skills .skill {
@@ -781,9 +781,13 @@ header #search-result-inner .search-item p {
 	}
 	
 #vac-table {
-	padding-bottom:120px;	
+	padding-bottom:80px;	
 }
-	
+
+#appl-table {
+	padding-bottom:80px;	
+}
+
 	
 /* Start of footer styles */	
 footer {
