--- a/web/css/other.css
+++ b/web/css/other.css
@@ -60,16 +60,27 @@ table{font-size:1.5rem;color:rgba(0,0,0,.7);font-weight:bold;background:#fff;mar
 table a:link{color:#474747}
 table a:visited{color:#474747;font-weight:bold;text-decoration:none}
 table a:active,table a:hover{color:#bd5a35;text-decoration:underline}
-table th{padding:15px 5px 15px 5px;text-transform:uppercase;text-align:left;font-size:2rem}
+table th{padding:15px 5px 15px 5px;text-transform:uppercase;text-align:left;font-size:1.7rem}
 table tr{text-align:left;padding-left:20px}
-table tr td{padding:15px 12px;background:#f2f2f2}
+table tr td{padding:15px 12px;background:#f2f2f2;}
 table tr:nth-child(2n+1) td{background:#FFF}
 table tr:hover td{background:#4c4c4c;color:#FFF;cursor:pointer}
+table tr td .edit {display:none;margin:3px 0 0 15px !important;width:25px;opacity:0.6;filter:alpha(opacity=60);}
+table tr:hover td .edit {display:block;}
+table tr:hover td a {color:#FFF;}
+table tr td .edit:hover {opacity:1;filter:alpha(opacity=100);}
 table.tablesorter thead tr .header span{background-image:url(../images/sort_bg.png);background-repeat:no-repeat;background-position:center right;cursor:pointer;display:inline-block;padding-right:20px}
 table.tablesorter thead tr .headerSortUp span{background-image:url(../images/sort_asc.png)}
 table.tablesorter thead tr .headerSortDown span{background-image:url(../images/sort_desc.png)}
 
+table#vac-table tr td {line-height:30px;}
 
+table#appl-table tr td .circle {height:55px;margin-left:20px;}
+table#appl-table tr:hover td {cursor:default;}
+
+.pager {margin:-60px 0 40px;text-align:center;}
+.pager a {display:inline-block;width:25px;height:25px;margin-right:5px;line-height:25px;text-align:center;color:#4C4C4C;font-size:1.3rem;;border:2px solid #FF3000;border-radius:50%;-moz-border-radius:50%;-webkit-border-radius:50%;}
+.pager a.active, .pager a:hover {background-color:#FF3000;color:#FFF;}
 
 /*bottons*/
 .button {
